--- a/src/Styles/PageStyle.css
+++ b/src/Styles/PageStyle.css
@@ -2,7 +2,7 @@
     display: block;
     height: 100%;
     margin: auto;
-    width: 20%; 
+    width: 50%; 
 }
 .container-bg{
     background-color: #121212;
@@ -44,6 +44,9 @@
 @media (min-width: 998px){
 .w-55{
     width: 55%;
+}
+.header{
+    width: 20%; 
 }
 }
 .min-h-70{
